--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -224,6 +224,7 @@ include ../components/popup-invoice/popup-invoice-host
 include ../components/popup-invoices/popup-invoices
 include ../components/popup-new-offer/popup-new-offer
 include ../components/popup-new-offer/popup-new-offer-v2
+include ../components/popup-offer-types/popup-offer-types
 include ../components/popup-order-summary/popup-order-summary
 include ../components/popup-password-change/popup-password-change
 include ../components/popup-payment-form/popup-payment-form
