--- a/app/pages/space/space-v3.pug
+++ b/app/pages/space/space-v3.pug
@@ -6,7 +6,7 @@ block head
 block header
   - var headerClass = ' is-login nd-header_border'
   - var pageClass = ''
-  - var isMap = true
+  - var isMap = false
   - var host = true
 
 block content
@@ -97,6 +97,7 @@ block panels
   .reservation-request-popup(data-rr-wrapper-block="popup")
 
 block popups
-  //- +popup-arrange-viewing#popup-arrange-viewing
+  +nd-popup-arrange-viewing#nd-popup-arrange-viewing
   +reservation-request#reservation-request
   +reservation-request-popup#reservation-request-popup
+  +popup-offer-types#popup-offer-types
