--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -211,6 +211,7 @@ $nd-color-input-placeholder: #4e4e4e;
 $nd-color-border4: #d1d8da;  //#d8ddde
 $nd-color-gray: #c6c6c6;
 $nd-color-gray-text8: #515151;
+$nd-color-border5: #bfc3c5;
 
 // ##########
 // Transitions
